--- a/gui/layout.htm
+++ b/gui/layout.htm
@@ -62,6 +62,11 @@
           </a>
           </li>
           <li class="current">
+          <a href="{{@SR}}/drugcontent">
+            İlaç alt başlıkları
+          </a>
+          </li>
+          <li class="current">
           <a href="{{@SR}}/review">
             İlaçlar[A-Z]
           </a>
