--- a/gui/layout.htm
+++ b/gui/layout.htm
@@ -5,10 +5,10 @@
     <meta http-equiv = "Pragma" content = "no-cache" />
     <meta http-equiv = "Expires" content = "-1" />
     <meta http-equiv = "Content-Type" content = "text/html; charset=utf-8" />
-    <link rel="shortcut icon" href="{{@SR}}/public/images/favicon.ico" />
+    <link rel="shortcut icon" href="{{@SR}}/assets/images/favicon.ico" />
     <link rel="stylesheet" type="text/css" 
-    href="{{@SR}}/public/stylesheets/style-home.css" />
-    <script type='text/javascript' src='{{@SR}}/public/javascripts/jquery.js'></script>
+    href="{{@SR}}/assets/stylesheets/style-home.css" />
+    <script type='text/javascript' src='{{@SR}}/assets/javascripts/jquery.js'></script>
 
     <title>{{@title}}</title>
     <style>
@@ -21,7 +21,7 @@
         border-top-right-radius:5px;
       }
       div.page-header {
-        background:url(public/images/logo.png) no-repeat 98% top;
+        background:url(assets/images/logo.png) no-repeat 98% top;
         height: 90px;
         background-size: auto;
       }
@@ -67,12 +67,12 @@
           </li>
           <li class="current">
           <a href="{{@SR}}/drug">
-            Etkileşim
+            İlaç içerikleri
           </a>
           </li>
           <li class="current">
           <a href="{{@SR}}/drugcontent">
-            İlaç alt başlıkları
+            İlaç Alt Başlıkları
           </a>
           </li>
           <li class="current">
@@ -86,7 +86,7 @@
           </a>
           </li>
           <li class="current">
-          <a href="{{@SR}}/info">
+          <a href="{{@SR}}/about">
             Hakkında
           </a>
           </li>
@@ -102,7 +102,7 @@
   <div id="footer">
     <ul class="recent photos" style="float:left;">
       <li><a href="http://sim.omu.edu.tr" title="Bilgisayar Mühendisliği">
-        <img src="{{@SR}}/public/images/sim.png" width="26" height="26"/>
+        <img src="{{@SR}}/assets/images/sim.png" width="26" height="26"/>
       </a></li>
     </ul>
       copyright &copy; 2011 Akılcı İlaç Kullanım Sistemi<br/>
