--- a/gui/about.htm
+++ b/gui/about.htm
@@ -1,52 +1,46 @@
-<style>
-  div#wrapper {border-color:#a9014b;}
-  li.magenta {
-      background:#a9014b;
-      text-shadow:0 -1px 1px rgba(0,0,0,.25);
-      -webkit-border-bottom-left-radius:3px;
-      -webkit-border-bottom-right-radius:3px;
-      -moz-border-radius:0 0 3px 3px;
-      position:relative;
-    }
-  ul.tabs li.magenta a{color:#fff;}
-  ul.tabs li.home a{color:#333; text-shadow:none;background-color:#f0f0f0;}
-</style>
-
-<h2 class="magenta">Sistem Hakkındaki Bilgiler</h2>
-Tasarım çalışması - 1 Web tabanlı akılcı ilaç kullanım sistemi projesidir.
-
-<h3 class="magenta">Proje Grubu Hakkında Açıklamalar</h2>
-  <table class="custom">
-    <tr>
-      <td class="label">
-        <label>Gökhan Demir</label>
-      </td>
-      <td class="field">
-        Veritabanı, Regexp, Web Tabanlı Sistem
-      </td>
-    </tr>
-    <tr>
-      <td class="label">
-        <label>Merve Ceylan</label>
-      </td>
-      <td class="field">
-        Teknik içerik hakkında bilgiler
-      </td>
-    </tr>
-    <tr>
-      <td class="label">
-        <label>Yunus Ateş</label>
-      </td>
-      <td class="field">
-        Regexp
-      </td>
-    </tr>
-    <tr>
-      <td class="label">
-        <label>Hasan Ayvaz</label>
-      </td>
-      <td class="field">
-        Regexp
-      </td>
-    </tr>
-  </table>
+<h2 class="magenta">Proje Grubu Hakkında Açıklamalar</h2>
+<div id="meio">
+  <div id="meio1">
+    <h1>Gökhan Demir</h1>
+    <ul>
+      <li class="warning">Veritabanı tasarımı</li>
+      <li class="warning">Regexp</li>
+      <li class="accept">Yaşlı hastalar için etkileşimli ilaç ve normal 
+      ilaçların birleştirilip gösterilmesi</li>
+      <li class="accept">Reçete form sayfası 1. aşama</li>
+      <li class="warning">Reçete form sayfası 2. aşama</li>
+      <li class="warning">Computer science için sunum hazırlama</li>
+    </ul>
+  </div>
+</div>
+<div id="meio">
+  <div id="meio2">
+    <h1>Merve Ceylan</h1>
+    <ul>
+      <li class="accept">Teknik içerik hakkında bilgiler</li>
+      <li class="accept">Yaşlı hastalar için hastalık ve ilaç
+      bilgilerinin toplanması ve girilmesi</li>
+      <li class="warning">Computer science için sunum hazırlama</li>
+    </ul>
+  </div>
+</div>
+<div id="meio">
+  <div id="meio3">
+    <h1>Yunus Ateş</h1>
+    <ul>
+      <li class="warning">Regexp</li>
+      <li class="warning">Yaşlılarda sık görülen hastalıkların ilaçlardaki 
+      prospektüs ile
+      etkileşiminin nasıl olduğunu kavramak</li>
+      <li class="warning">Computer science için sunum hazırlama</li>
+    </ul>
+  </div>
+</div>
+<div id="meio">
+  <div id="meio4">
+    <h1>Hasan Ayvaz</h1>
+    <ul>
+      <li class="warning">Regexp</li>
+    </ul>
+  </div>
+</div>
