--- a/gui/layout.htm
+++ b/gui/layout.htm
@@ -55,37 +55,37 @@
   <div id="logo">
     <div class="page-header">
       <h1>Ondokuz Mayıs Üniversitesi</h1>
-      <h2>Web Tabanlı Akılcı İlaç Kullanım Sistemine Hoş Geldiniz</h2>
+      <h2>Web Tabanlı Akılcı İlaç Kullanım Sistemi</h2>
     </div>
     <div id="notice" style="margin-top:-30px;">
       <div class="row">
         <ul class="sub-nav">
-          <li class="current">
+          <li class="">
           <a href="{{@SR}}" title="Ana Sayfa">
             Ana Sayfa
           </a>
           </li>
-          <li class="current">
+          <li class="">
           <a href="{{@SR}}/drug">
             İlaç içerikleri
           </a>
           </li>
-          <li class="current">
+          <li class="">
           <a href="{{@SR}}/drugcontent">
             İlaç Alt Başlıkları
           </a>
           </li>
-          <li class="current">
+          <li class="">
           <a href="{{@SR}}/review">
             İlaçlar[A-Z]
           </a>
           </li>
-          <li class="current">
+          <li class="">
           <a href="{{@SR}}/prescription">
             Reçete
           </a>
           </li>
-          <li class="current">
+          <li class="">
           <a href="{{@SR}}/about">
             Hakkında
           </a>
@@ -100,13 +100,15 @@
   </div>
 
   <div id="footer">
-    <ul class="recent photos" style="float:left;">
-      <li><a href="http://sim.omu.edu.tr" title="Bilgisayar Mühendisliği">
+    <ul class="recent photos xsmall">
+      <li><a href="http://sim.omu.edu.tr" title="Patient Simulation System">
         <img src="{{@SR}}/assets/images/sim.png" width="26" height="26"/>
       </a></li>
     </ul>
       copyright &copy; 2011 Akılcı İlaç Kullanım Sistemi<br/>
       <b>irtibat</b> : <code id="errorline">web@bil.omu.edu.tr</code>
+    </ul>
   </div>
+
 </body>
 </html>
