--- a/gui/prescription.htm
+++ b/gui/prescription.htm
@@ -46,57 +46,54 @@
 
 <h2>Reçete</h2>
 
-<form action="drugscontent" method="post">
-  <table id="table">
+<form action="prescription_result" method="post">
+  <table id="table" class="custom">
     <tr>
       <th colspan="4">Reçete Bilgileri</th>
     </tr>
     <tr>
-      <th class="field1">Tc Kimlik No</th>
-      <th class="field2">
-        <label class="label">
-          1234567890
-        </label>
-      </th>
-      <th class="field1">Yaş</th>
-      <th class="field2">
-        <input type="text" id="age" name="age" />
-      </th>
-    </tr>
-    <tr>
       <th class="field1">Hasta Adı</th>
       <th class="field2">Ramazan Sarsılmaz</th>
-      <th class="field1">Cinsiyet</th>
-      <th class="field2">
-        Erkek
-      </th>
-
+      <th class="field1">Yaş</th>
+      <th class="field2"><input type="text" id="age" name="age" /></th>
     </tr>
     <tr>
-      <th class="field1">İlaç</th>
+      <th class="field1">Tc Kimlik No</th>
+      <th class="field2">1234567890</th>
+      <th class="field1">Cinsiyet</th>
+      <th class="field2">Erkek</th>
+    </tr>
+    <tr>
+      <th class="field1">Tanı</th>
       <th class="field2">
+        <div class="tokeninput">
+          <label class="label">
+            <input type="text" id="diseases" name="diseases" />
+          </label>
+        </div>
+      </th>
+      <th class="field1">Doktor Adı</th>
+      <th class="field2">Mustafa Çapraz</th>
+    </tr>
+    <tr>
+      <th colspan="4" class="field1">
         <div class="tokeninput">
           <label class="label">
             <input type="text" id="drugs" name="drugs" />
           </label>
         </div>
       </th>
-      <th class="field1">Doktor Adı</th>
-      <th class="field2">
-        Mustafa Çapraz
-      </th>
     </tr>
     <tr>
-      <th colspan="3" class="field1"></th>
-      <th class="field2">
+      <th colspan="4" class="field2">
         <input type="submit" class="button" value="Kaydet" />
       </th>
     </tr>
   </table>
-
-  <script type="text/javascript">
-    $(document).ready(function() {
-        $("#drugs").tokenInput("inc/get_drug.php");
-        });
-  </script>
 </form>
+<script type="text/javascript">
+  $(document).ready(function() {
+      $("#drugs").tokenInput("inc/get_drug.php");
+      $("#diseases").tokenInput("inc/get_diseases.php");
+      });
+</script>
