--- a/gui/about.htm
+++ b/gui/about.htm
@@ -16,10 +16,12 @@
   <div id="meio2">
     <h1>Merve Ceylan</h1>
     <ul>
-      <li class="accept">Teknik içerik hakkında bilgiler</li>
+      <li class="accept">İlaç etkileşimleri hakkında bilgiler(major, minor)</li>
+      <li class="warning">İlaç prospektüslerinden etkileşimleri kavramak</li>
       <li class="accept">Yaşlı hastalar için hastalık ve ilaç
       bilgilerinin toplanması ve girilmesi</li>
-      <li class="warning">Computer science için sunum hazırlama</li>
+      <li class="warning">Computer science student workshop 2012 için sunum 
+      hazırlama</li>
     </ul>
   </div>
 </div>
@@ -29,9 +31,9 @@
     <ul>
       <li class="warning">Regexp</li>
       <li class="warning">Yaşlılarda sık görülen hastalıkların ilaçlardaki 
-      prospektüs ile
-      etkileşiminin nasıl olduğunu kavramak</li>
-      <li class="warning">Computer science için sunum hazırlama</li>
+      prospektüs ile etkileşiminin nasıl olduğunu kavramak</li>
+      <li class="warning">Computer science student workshop 2012 için sunum 
+      hazırlama</li>
     </ul>
   </div>
 </div>
